# XALGL

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake  Findassimp.cmake
include/: BlendMap.hpp  Camera.hpp  Debug.hpp  DebugLight.hpp  DirectionalLight.hpp  GL.hpp  Global.hpp  Handler.hpp  Light.hpp  Loader.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  Rect.hpp  RenderManager.hpp  ShaderProgram.hpp  StaticShader.hpp  Transformable.hpp  World.hpp
include/Debug/: Light.hpp
include/ECS/: Components.hpp  EntitiesManager.hpp  Entity.hpp
include/Light/: DirectionalLight.hpp  Light.hpp  PointLight.hpp
include/Shader/: FragmentShaders.hpp  Settings.hpp  ShaderGenerator.hpp  ShaderProgram.hpp  Uniforms.hpp  VertexShaders.hpp
include/Terrain/: HeightmapTerrain.hpp  Terrain.hpp
include/Text/: Font.hpp  Text.hpp  TextShader.hpp
src/: Handler.cpp  Mesh.cpp  Model.cpp  RenderManager.cpp  World.cpp  main.cpp
